# musurgia

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  README.rst  TODO.md  _frozenrequirements.txt  frozenrequirements.txt  mypy.ini  pyproject.toml  pytest.ini  pytest_command_cheat  readalist.py  requirements.txt  requirements_for_development.txt  requirements_for_tests.txt  setup.py  test_commands  test_requirements.txt  testfilecontent.py  testrequirements.txt  tox.ini  tree.py
.github/workflows/: ci.yml  python-tests.yml
docs/: conf.py  index.rst  musurgia_intro.rst  requirements.txt
docs/api/: fractal.rst  musurgia.rst  pdf.rst  random.rst  utils.rst
docs/source/: conf.py  index.rst
fractaltree/: fractalmusic.py  fractaltree.py  midigenerators.py
issues/issue12/: issue12.py  issue12.xml
issues/issue13/: issue13.xml
issues/issue14/: issue14.xml
issues/issue2/: issue2.py
issues/issue8/: issue8.py  issue8_2_test_2.xml  issue8_3.xml  issue8_test_1.xml
musurgia/: agunittest.py  arithmeticprogression.py  check_types.py  chordfactory.py  chordfield.py  gearwheels.py  interpolation.py  magicrandom.py  musurgia_exceptions.py  musurgia_types.py  random.py  tree.py  unittest.py  utils.py
musurgia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
musurgia/chordfactory/: chordfactory.py  midigenerators.py
musurgia/chordfield/: chordfield.py  valuegenerator.py
musurgia/fractal/: __init__.py  fractaltree.py  graphic.py  graphic_old.py
musurgia/fractaltree/: fractalmusic.py  fractalmusicsquare.py  fractaltree.py
musurgia/graphics/: container.py  defaults.py  drawobject.py  geometry.py  line_segment.py  line_segment_old.py  (+9 more)
(+543 files in other folders)
