[project]
name = "musurgia"
version = "4.0.0b"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.5",
    "matplotlib>=3.10.8",
    "musicscore>=2.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]
test = [
    "deepdiff>=8.6.1",
    "diff-pdf-visually>=1.8.1",
    "pytest>=9.0.2",
    "xmltodict>=1.0.2",
]

[tool.pytest.ini_options]
addopts = "-s --doctest-modules --ignore=musurgia/old_pdf_tests"