[project]
name = "musurgia"
version = "4.0.0b"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "musicscore>=2.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
test = [
    "pytest>=9.0.2",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
addopts = "-s --doctest-modules --ignore=musurgia/old_modules"


[tool.mypy]
exclude = '(old_modules|tests)'
ignore_missing_imports = true
