[project]
name = "musurgia"
version = "4.0.0b"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "musicscore>=2.6.0",
    "pycairo>=1.29.0",
    "svg-py>=1.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]
test = [
    "pytest>=9.0.2",
    "cairosvg>=2.8.2",
    "pillow>=12.1.0",
]

[tool.pytest.ini_options]
addopts = "-s --doctest-modules --ignore=musurgia/old_modules"
markers = ["nonci: marks non ci tests"]

[tool.mypy]
exclude = '(old_modules|tests)'
ignore_missing_imports = true
